Write pure white as a background in the pngalpha device. Bug 689934.

Details:

Russell Lang reports this caused problems originally, but it seems to
work now, so reverting the behaviour per his request.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8846 a1074d23-0009-0410-80fe-cf8c14f379e6